--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,24 @@
 .mg-5 .row {
   --bs-gutter-x: 0;
 }
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  display: inline-block;
+  width: 2rem;
+  border-radius: 50%;
+  height: 50px;
+  background-color: black;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 100% 100%;
+}
+.carousel-control-next-icon {
+  margin-right: -290px;
+}
+.carousel-control-prev-icon {
+  margin-left: -290px;
+}
+
+.cardPck:hover {
+  padding: 5px;
+}
